# c_physics

./: CMakeLists.txt  README.md
assets/shaders/: circleFragment.fs  circleVertex.vs  lineFragment.fs  lineVertex.vs  rectFragment.fs  rectVertex.vs  spriteFragment.fs  spriteVertex.vs
src/: main.c
src/display/: circle.c  circle.h  display.c  display.h  line.c  line.h  rect.c  rect.h  shader.c  shader.h  sprite.c  sprite.h  texture.c  texture.h
src/ext/: external_Setup.cmake
src/ext/glad/include/: glad.h
src/ext/glad/lib/: glad.c
src/physics/: body.c  body.h  collision_detection.c  collision_detection.h  constraint.c  constraint.h  contact.c  contact.h  force.c  force.h  matmn.c  matmn.h  shape.c  shape.h  vecn.c  vecn.h  world.c  world.h
